# vehicle_demo

./: README.md
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/pkgconfig/: smartcar_description.pc  vehicle.pc  vehicle_description.pc
install/share/smartcar_description/: package.xml
install/share/smartcar_description/cmake/: smartcar_descriptionConfig.cmake
install/share/smartcar_description/urdf/: smartcar.urdf
install/share/vehicle/: package.xml
install/share/vehicle/cmake/: vehicleConfig.cmake
install/share/vehicle/launch/: vehicle_rviz.launch
install/share/vehicle/rviz/: vehicle_rviz.rviz
install/share/vehicle_description/: package.xml
install/share/vehicle_description/cmake/: vehicle_descriptionConfig.cmake
install/share/vehicle_description/launch/: vehicle.launch
install/share/vehicle_description/meshes/: gps_antenna.dae  mmw.dae
install/share/vehicle_description/rviz/: display.rviz
install/share/vehicle_description/urdf/: vehicle.urdf.xacro
src/smartcar_description/: CMakeLists.txt
src/smartcar_description/launch/: smartcar_rviz.launch
src/smartcar_description/rviz/: smartcar.rviz
src/vehicle/: CMakeLists.txt
src/vehicle/launch/: vehicle_rviz.launch
src/vehicle/meshes/: camera.dae
src/vehicle/rviz/: vehicle_rviz.rviz
src/vehicle/urdf/: vehicle_model.urdf.xacro
src/vehicle_description/: CMakeLists.txt
src/vehicle_description/launch/: vehicle.launch  yaxing.launch
src/vehicle_description/meshes/: camera.stl  ibeo.dae
src/vehicle_description/urdf/: .test.urdf.xacro.swp  test.urdf.xacro
(+1 files in other folders)
