<?xml version="1.0"?>
<package format="2">
  <name>vehicle_description</name>
  <version>1.0.0</version>
  <description>
    URDF describing PIONEER.
  </description>
  <license>BSD</license>
  <maintainer email="zhangsongyi@stu.xjtu.edu.cn">Zhang Songyi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>